adding in dynamic list to show case details from case entered

--- a/app/views/noticeofchange/solicitor/casedetailsdivorce.html
+++ b/app/views/noticeofchange/solicitor/casedetailsdivorce.html
@@ -14,7 +14,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <p class="">3689264258577069: Smith vs Blythe  &nbsp; </p>
+                    <p class="">{{ data.casenumberselected }}: Smith vs Blythe  &nbsp; </p>
 
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                         Print
