--- a/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
+++ b/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
@@ -14,9 +14,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <p class="govuk-!-font-weight-bold">3689264258577069: Anne Yang vs Tony Yang  &nbsp; </p>
-
-
+                    <p class="govuk-!-font-weight-bold">{{ data.casenumberselected }}: Anne Yang vs Tony Yang  &nbsp; </p>
                 </div>
 
 
