--- a/app/views/noticeofchange/solicitor/casedetailsimmigration.html
+++ b/app/views/noticeofchange/solicitor/casedetailsimmigration.html
@@ -14,7 +14,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <h1 class="govuk-heading-l">DRAFT</h1>
+                    <h1 class="govuk-heading-l">{{ data.casenumberselected }}</h1>
                 </div>
 
 
