--- a/app/views/noticeofchange/solicitor/casedetailspubliclaw.html
+++ b/app/views/noticeofchange/solicitor/casedetailspubliclaw.html
@@ -14,7 +14,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <h1 class="govuk-heading-l">#3689-2642-5857-7069 &nbsp; </h1>
+                    <h1 class="govuk-heading-l">#{{ data.casenumberselected }} &nbsp; </h1>
 
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                         Print
