--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -14,7 +14,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <h1 class="govuk-heading-l">#3689-2642-5857-7069 &nbsp; </h1>
+                    <h1 class="govuk-heading-l">#{{ data.casenumberselected }} &nbsp; </h1>
 
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                         Print
@@ -74,11 +74,25 @@ Case details
                                 </tr>
                             </thead>
                             <tbody class="govuk-table__body" >
-                                <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
-                                    <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Apply for probate</a></td>
-                                    <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
-                                    <td class="govuk-table__cell">Alex Smith</td>
-                                </tr>
+
+                                {% if data.caseadded == 'true' %}
+                                    <tr class="govuk-table__row" style=" ">
+                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Apply for probate</a></td>
+                                        <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
+                                        <td class="govuk-table__cell">Doug Jones</td>
+                                    </tr>
+                                    <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
+                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change</a></td>
+                                        <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
+                                        <td class="govuk-table__cell">Alex Smith</td>
+                                    </tr>
+                                {% else %}
+                                    <tr class="govuk-table__row"  style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
+                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Apply for probate</a></td>
+                                        <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
+                                        <td class="govuk-table__cell">Alex Smith</td>
+                                    </tr>
+                                {% endif %}
                             </tbody>
                         </table>
                     </div>
@@ -93,14 +107,26 @@ Case details
                                 <p>Summary</p>
                                 <p>Comment</p>
                             </div>
-                            <div>
-                                <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
-                                <p>Alex Smith</p>
-                                <p>Application created</p>
-                                <p>Apply for probate</p>
-                                <p>-</p>
-                                <p>-</p>
-                            </div>
+                            {% if data.caseadded == 'true' %}
+                                <div>
+                                    <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
+                                    <p>Alex Smith</p>
+                                    <p>Case transferred to new solicitor</p>
+                                    <p>Notice of change</p>
+                                    <p>-</p>
+                                    <p>-</p>
+                                </div>
+                            {% else %}
+                                <div>
+                                    <p style="text-decoration: underline;">17 May 2020, 3:49:22 PM</p>
+                                    <p>Doug Jones</p>
+                                    <p>Application created</p>
+                                    <p>Apply for probate</p>
+                                    <p>-</p>
+                                    <p>-</p>
+                                </div>
+                            {% endif %}
+
                         </div>
 
                     </div>
