updated index to cover emails

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -14,19 +14,20 @@
       </h1>
 
       <p>Solicitor<br>
-          <a href="noticeofchange/solicitor/caselist">Take over case</a><br>
-          <a href="">Stop representing case</a>
+          <a href="solicitor/caselist">Case list</a><br>
       </p>
 
       <br>
 
-      <p>Citizen<br>
-         <a href="">Remove solicitor and self represent</a>
-      </p>
+        <p>Email - Solicitor who is being replaced<br>
+            <a href="">They are now off record</a><br>
+        </p>
 
-      <p>Citizen - Email after solicitor stop representing<br>
+
+      <p>Email - Citizen - After solicitor stop representing<br>
          <a href="">Already registered with IDAM</a><br>
-         <a href="">Not registered with IDAM</a>
+         <a href="">Not registered with IDAM</a><br>
+         <a href="">When case goes to paper</a>
       </p>
 
     </div>
