--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -14,7 +14,7 @@
       </h1>
 
       <p>Solicitor<br>
-          <a href="solicitor/caselist">Case list</a><br>
+          <a href="noticeofchange/solicitor/caselist">Case list</a><br>
       </p>
 
       <br>
